orborus.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: orborus
  name: orborus
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: orborus
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/shuffle: "true"
        io.kompose.service: orborus
    spec:
      containers:
        - env:
            - name: BASE_URL
              value: "https://shuffler.io"
            - name: SHUFFLE_SCALE_REPLICAS
              value: "7"
            - name: IS_KUBERNETES
              value: "true"
            - name: ENVIRONMENT_NAME
              value: "environment test"
            - name: ORG
              value: "9c938e5b-d812-40d9-92f0-93783f43ec0d"
            - name: AUTH 
              value: "3663a270-bb3a-4678-a365-d879601a1a0c"

          image: ghcr.io/shuffle/shuffle-orborus:nightly
          #imagePullPolicy: Never
          name: shuffle-orborus
          resources: {}
      hostname: shuffle-orborus
      restartPolicy: Always
